--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.4"
   }
